# odas_android

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  odas_processor.cpp  test.c
app/src/main/cpp/odas/include/odas/general/: interface.h
app/src/main/cpp/odas/include/odas/source/: src_hops.h
app/src/main/cpp/odas/include/odas/utils/: fft.h  fifo.h
app/src/main/cpp/odas/src/general/: interface.c
app/src/main/cpp/odas/src/source/: src_hops.c
app/src/main/cpp/odas/src/utils/: fft.c  fifo.c
app/src/main/java/com/example/myapplication/: MainActivity.kt  OdasEngine.kt  RadarChartView.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
